--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
 
 
     <script>
-      //Your web app's Firebase configuration
-
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyCOOhTIbyuwEqVMRIfiyA8ORRZV3cK84Lw",
+        authDomain: "multiplayer-car-race-24610.firebaseapp.com",
+        databaseURL: "https://multiplayer-car-race-24610.firebaseio.com",
+        projectId: "multiplayer-car-race-24610",
+        storageBucket: "multiplayer-car-race-24610.appspot.com",
+        messagingSenderId: "103487810295",
+        appId: "1:103487810295:web:ddce5fb2de99442f7e81f2"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
     </script>
-
     <script src="js/Player.js"></script>
     <script src="js/Form.js"></script>
     <script src="js/Game.js"></script>
